# omni-cv-rules

./: Makefile  README.md  pyproject.toml
coconut/: convert.coco  omni_converter.coco  recursive.coco  to_bytes.coco  torch_rules.coco  widgets.coco
omni_cv_rules/: custom_rules.py  nrm_quiver.py  rulebook.py
omni_cv_rules/coconut/: __init__.py  convert.py  omni_converter.py  recursive.py  to_bytes.py  torch_rules.py  visualization.py  widgets.py
omni_cv_rules/legacy/: auto_image.py  default_solvers.py
omni_cv_rules/place_holder/: torch_proxy.py
omni_cv_rules/py_38/: torch_rules.py
test/: last_failed_solve.pkl  test_cv_conversions.py
