[tool.poetry]
name = "omni-cv-rules"
version = "0.1.2"
description = ""
authors = ["Kento Masui <nameissoap@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
py-omni-converter="*"
torch = "*"
numpy = "*"
Pillow = "*"
frozendict = "*"
ipywidgets = "*"
pprintpp = "*"
pandas = "*"
bqplot = "*"
torchvision = "*"
[tool.poetry.dev-dependencies]
coconut = "*"
invoke = "*"
pytest = "*"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
